add posts functionality

--- a/SITE WEB/App/Views/Home/index.html
+++ b/SITE WEB/App/Views/Home/index.html
@@ -1,16 +1,41 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 
-{% block title %}Home{% endblock %}
+{% block title%}
+Accueil
+{% endblock %}
 
 {% block body %}
+<header class="masthead" style="background-image: url('/assets/img/home-bg.jpg')">
+    <div class="container position-relative px-4 px-lg-5">
+        <div class="row gx-4 gx-lg-5 justify-content-center">
+            <div class="col-md-10 col-lg-8 col-xl-7">
+                <div class="site-heading">
+                    <h1>Clean Blog</h1>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
+<div class="container px-4 px-lg-5">
+    <div class="row gx-4 gx-lg-5 justify-content-center">
+        <div class="col-md-10 col-lg-8 col-xl-7">
+            <!-- Post preview-->
+            {% for post in posts %}
+            <div class="post-preview">
+                <a href="/posts/{{post.id}}/show">
+                    <h2 class="post-title">{{post.title}}</h2>
+                </a>
+                <p class="post-meta">
+                    Publie a {{post.created_at}}
+                </p>
+            </div>
+            <!-- Divider-->
+            <hr class="my-4" />
+            {% endfor %}
 
-    <h1>Welcome</h1>
-    <p>Hello from a Twig template, {{ name }}!</p>
-
-    <ul>
-        {% for colour in colours %}
-            <li>{{ colour }}</li>
-        {% endfor %}
-    </ul>
-
+            <!-- Pager-->
+<!--            <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" href="#!">Plus anciens →</a></div>-->
+        </div>
+    </div>
+</div>
 {% endblock %}
