--- a/SITE WEB/App/Views/base-admin.html
+++ b/SITE WEB/App/Views/base-admin.html
@@ -48,9 +48,18 @@
 
         <!-- Heading -->
         <div class="sidebar-heading">
-            Interface
+            Gestion des articles
         </div>
-
+        <li class="nav-item">
+            <a class="nav-link" href="/posts/index">
+                <i class="fas fa-blog"></i>
+                <span>Articles</span></a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/posts/new">
+                <i class="fas fa-blog"></i>
+                <span>Ajouter un article</span></a>
+        </li>
 
         <!-- Divider -->
         <hr class="sidebar-divider">
@@ -110,7 +119,7 @@
                     <li class="nav-item dropdown no-arrow">
                         <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <span class="mr-2 d-none d-lg-inline text-gray-600 small">Douglas McGee</span>
+                            <span class="mr-2 d-none d-lg-inline text-gray-600 small">Alassane Ndoye</span>
                             <img class="img-profile rounded-circle"
                                  src="/img/undraw_profile.svg">
                         </a>
